# push

./: CHANGELOG.md  README.md  app.drey.Push.json  meson.build  push.doap
.github/workflows/: CI.yml
data/: app.drey.Push.desktop.in  app.drey.Push.gschema.xml  app.drey.Push.metainfo.xml.in  app.drey.Push.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main.py  meson.build  push.gresource.xml  push.in  window.py
src/gtk/: window.ui
